--- a/client/1c-formr-net/public/notready.html
+++ b/client/1c-formr-net/public/notready.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description"  content="Web site created using create-react-app" />
     <title>Not Ready Yet!</title>
   </head>
   <body>
-    <div id="notready">This page is not ready yet!</div>
+    <p>This page is not ready yet!</p>
+    <img src="notready.png">
   </body>
 </html>
