--- a/home/index-bt.html
+++ b/home/index-bt.html
@@ -35,8 +35,8 @@
 
     <!--  Section1 -->
     <div    class="Section1"          style="width:100%; overflow: auto;">
-        <h2 class="Section1ImageText" style="width:100%; text-align: left; padding-left: 120px;">The Renaissance<br>Web Developer</h2>
-        <p  class="Section1Paragraph" style="width: 90%; margin-top:-10px;">
+        <h2 class="Section1ImageText" style="width:100%;">The Renaissance<br>Web Developer</h2>
+        <p  class="Section1Paragraph" style="width: 90%; margin-top:-50px;">
             Shouldn’t every computer professional understand the total picture? You can’t go wrong with more knowledge about all of the disciplines.
         <br><br>
             The goal of the formR tutorial is to give you a step by step guide to building a complete environment for a secure server on the cloud serving web pages that access and manipulate data via the Internet.
@@ -84,7 +84,12 @@
                 5. Customize formR: Use Your Own Data
                 -  Deploy Your Own App
                 <br><br>
-
+                6. Markdown Reference
+                -  Introduction
+                -  Markdown Examples
+                -  CSS Variables
+                -  Docsify Templates
+                -  FormR Example
 <!--          </p> -->
     </div>
     <!-- END  Section2 -->
