--- a/home/index.html
+++ b/home/index.html
@@ -49,16 +49,10 @@
 
         <p  class="Section2Paragraph">
 
-            <p style="text-align: center; font-size: 20px; margin-bottom: -37px;">
+            <p style="text-align: center;  margin-bottom: -37px;">
                Tutorial Chapters
             <p>
-
-           <!-- Note: this is not Markdown and will not be redered as such.
-                      You must use HTML:
-                <ol><li>Item 1<ul><li>Bullet 1</li></ul></ol>
-             -->
-
-                <br><br>
+               <br><br>
                 1. Setup Workstation: Build Workstation
                 -  Test NodeJS
                 -  Clone FRApps
