--- a/home/index.html
+++ b/home/index.html
@@ -34,20 +34,20 @@
     <!-- END  Header -->
 
     <!--  Section1 -->
-    <div    class="Section1"          style="width:100%; overflow: auto;">
-        <h2 class="Section1ImageText" style="width:100%; text-align: left; padding-left: 120px;">The Renaissance<br>Web Developer</h2>
-        <p  class="Section1Paragraph" style="width: 90%; margin-top:-10px; text-align: left; padding-left: 50px;">
+    <div    class="Section1"          style="width:100%; overflow:auto ;">
+        <div class="Section1ImageText" style="width:100%; text-align: left; padding-left: 120px;">The Renaissance<br>Web Developer</div>
+        <div  class="Section1Paragraph" style="width: 90%; margin-top:-10px; text-align: left; padding-left: 50px;">
             Shouldn’t every computer professional understand the total picture? You can’t go wrong with more knowledge about all of the disciplines.
         <br><br>
             The goal of the formR Tutorial is to give you a step by step guide to building a complete environment for a secure server on the cloud serving web pages that access and manipulate data via the Internet.
-        </p>
+        </div>
     </div>
     <!-- END  Section1 -->
 
     <!--  Section2 -->
     <div    class="Section2"            style="width:100%; overflow: auto;">
-        <h2 class="Section2-h2" style="width:100%; text-align: left; padding-left: 120px; margin-top:-5px;">Tutorial Chapters</h2>
-        <p  class="Section2Paragraph" style="width: 90%; margin-top:-10px; text-align: left;padding-left: 50px;">
+        <div class="Section2-h2" style="width:100%; text-align: left; padding-left: 120px; margin-top:-5px;">Tutorial Chapters</div>
+        <div  class="Section2Paragraph" style="width: 90%; margin-top:-10px; text-align: left;padding-left: 50px;">
                 <br><br>
                 1. Setup Workstation: Build Workstation
                 -  Test NodeJS
@@ -75,8 +75,8 @@
                 -  Deploy Your Own App
                 <br><br>
 
-<!--          </p> -->
-    </div>
+           </div>
+        </div>
     <!-- END  Section2 -->
 
     <!--  Footer -->
