--- a/home/index.html
+++ b/home/index.html
@@ -13,6 +13,11 @@
 
     <body>
 
+    <!--
+        <div class="Body-Custom">
+        <div>
+        -->
+
     <!--  Header -->
     <div class="Header">
         <!-- INSERT Point - responsive -->
@@ -35,7 +40,7 @@
 
     <!--  Section1 -->
     <div    class="Section1"          style="width:100%; overflow:auto ;">
-        <div class="Section1ImageText" style="width:100%; text-align: left; padding-left: 120px;">The Renaissance<br>Web Developer</div>
+        <div class="Section1Title">The Renaissance<br>Web Developer</div>
         <div  class="Section1Paragraph" style="width: 90%; margin-top:-10px; text-align: left; padding-left: 50px;">
             Shouldn’t every computer professional understand the total picture? You can’t go wrong with more knowledge about all of the disciplines.
         <br><br>
@@ -46,7 +51,7 @@
 
     <!--  Section2 -->
     <div    class="Section2"            style="width:100%; overflow: auto;">
-        <div class="Section2-h2" style="width:100%; text-align: left; padding-left: 120px; margin-top:-5px;">Tutorial Chapters</div>
+        <div class="Section2Title">Tutorial Chapters</div>
         <div  class="Section2Paragraph" style="width: 90%; margin-top:-10px; text-align: left;padding-left: 50px;">
                 <br><br>
                 1. Setup Workstation: Build Workstation
@@ -87,6 +92,9 @@
         </ul>
     </div>
     <!-- END  Footer -->
+
+</div>
+<!-- END  Main -->
 
     </body>
 
