Added .container and *

--- a/home/index.html
+++ b/home/index.html
@@ -13,10 +13,7 @@
 
     <body>
 
-    <!--
-        <div class="Body-Custom">
-        <div>
-        -->
+        <div class="container">
 
     <!--  Header -->
     <div class="Header">
@@ -94,7 +91,9 @@
     <!-- END  Footer -->
 
 </div>
+
 <!-- END  Main -->
+</div>
 
     </body>
 
