--- a/home/index.html
+++ b/home/index.html
@@ -8,6 +8,9 @@
         <title>formR Home</title>
         <link rel="shortcut icon" href="favicon.png">
         <link rel="stylesheet"    href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre" >
+        <link rel="stylesheet"    href="https://fonts.googleapis.com/css?family=Roboto+Slab" >
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
+        <link rel="stylesheet"    href="formr_logo.css">
         <link rel="stylesheet"    href="index.css">
     </head>
 
@@ -19,11 +22,14 @@
     <div class="Header">
         <!-- INSERT Point - responsive -->
         <div class="HeaderNavBars">
-            <object data="assets/images/hamburger.svg?fill=white"
+            <object data="assets/images/hamburger.svg?fill=blue"
                     type="image/svg+xml" title="Toggle sidebar">
             </object>
         </div>
-        <div class="HeaderLogo"><a href=""></a></div>
+        <div class="Logo">
+            <span class="FormRText1">form</span><span class="FormRText2">R</span>
+        </div>
+        <!--<div class="HeaderLogo"><a href=""></a></div>-->
         <div class="HeaderSpacer"></div>
 
         <ul  class="HeaderNavList">
@@ -36,9 +42,10 @@
     <!-- END  Header -->
 
     <!--  Section1 -->
-    <div    class="Section1"          style="width:100%; overflow:auto ;">
-        <div class="Section1Title">The Renaissance<br>Web Developer</div>
-        <div  class="Section1Paragraph" style="width: 90%; margin-top:-10px; text-align: left; padding-left: 50px;">
+    <div    class="Section1">
+    <!--<div    class="Section1"          style="width:100%; overflow:auto ;">-->
+        <div class="Section1Title">The Renaissance Web Developer</div>
+        <div  class="Section1Paragraph">
             Shouldn’t every computer professional understand the total picture? You can’t go wrong with more knowledge about all of the disciplines.
         <br><br>
             The goal of the formR Tutorial is to give you a step by step guide to building a complete environment for a secure server on the cloud serving web pages that access and manipulate data via the Internet.
@@ -47,10 +54,51 @@
     <!-- END  Section1 -->
 
     <!--  Section2 -->
-    <div    class="Section2"            style="width:100%; overflow: auto;">
-        <div class="Section2Title">Tutorial Chapters</div>
-        <div  class="Section2Paragraph" style="width: 90%; margin-top:-10px; text-align: left;padding-left: 50px;">
-                <br><br>
+    <!--<div    class="Section2"            style="width:100%; overflow: auto;">-->
+        <div    class="Section2">
+            <div class="Section2Title">Tutorial Chapters</div>
+        <!--<div  class="Section2Paragraph" style="width: 90%; margin-top:-10px; text-align: left;padding-left: 50px;">-->
+            <div  class="Section2Paragraph">
+                <ol class="OrderedList">
+                <li>Setup Workstation:</li>    
+                    <ul>
+                        <li><a href="https://8020data.github.io/FormR_docs/#/Setup/fr0101_Setup-Developer-Workstation" target="_blank">Build Workstation</a></li>    
+                        <li><a href="https://8020data.github.io/FormR_docs/#/Setup/fr0102_Test-Node" target="_blank">Test NodeJS</a></li>
+                        <li><a href="https://8020data.github.io/FormR_docs/#/Setup/fr0103_Clone-FR-Apps" target="_blank">Clone FRApps</a></li>
+                    </ul>
+
+                    <li>Setup Remote Server:</li>
+                <ul>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/Setup/fr0301_Setup-Vultr-Ubuntu" target="_blank">Vultr Ubuntu</a></li>    <li><a href="https://8020data.github.io/FormR_docs/#/Setup/fr0302_Setup-Hardening-Ubuntu" target="_blank">Harden Ubuntu</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/Setup/fr0303_Setup-Web-Server-Ubuntu" target="_blank">Install Web Server</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/Setup/fr0304_Setup-App-Server-Ubuntu" target="_blank">Install App Server</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/Setup/fr0305_Setup-Data-Server-Ubuntu" target="_blank">Install Data Server</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/Setup/fr0306_Setup-Website-SSL-Ubuntu" target="_blank">Run SSL Website</a></li>
+                </ul>
+                <li>Customize FRApps:</li>
+                <ul>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FRApps/fr020100_My-HTML-Custom" target="_blank" title="Go to My HTML App">My HTML App</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FRApps/fr020200_My-Javascript-Custom-App" target="_blank">My JavaScript App</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FRApps/fr020300_My-React-React-App" target="_blank">My React App</a></li>
+                </ul>
+                <li>Run formR:</li>
+                <ul>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FormR/fr0401_Deploy-My-Custom-App" target="_blank">Run My Custom App</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FormR/fr0401_Clone-formR" target="_blank">Clone formR</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FormR/fr0401_Deploy-formR" target="_blank">Deploy formR</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FormR/fr0401_World-Database" target="_blank">Run World Database</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FormR/fr0402_Authentication" target="_blank">Run Authentication</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FormR/fr0403_User-Administration" target="_blank">Run User Administration</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FormR/fr0404_World-Application" target="_blank">World Application</a></li>
+                </ul>
+                <li>Customize formR:</li>
+                <ul>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FormR/fr0501_Deploy-Your-Own-App" target="_blank">Deploy Your Own App</a></li>
+                    <li><a href="https://8020data.github.io/FormR_docs/#/FormR/fr0501_Use-Your_Qwn_Data" target="_blank">Your Own Data</a></li>
+                </ul>
+            </ol>
+            <!--    
+            <br><br>
                 1. Setup Workstation: Build Workstation
                 -  Test NodeJS
                 -  Clone FRApps
@@ -76,7 +124,7 @@
                 5. Customize formR: Use Your Own Data
                 -  Deploy Your Own App
                 <br><br>
-
+            -->    
            </div>
         </div>
     <!-- END  Section2 -->
