--- a/home/index.html
+++ b/home/index.html
@@ -26,7 +26,7 @@
                     <div>
                         <div>
                         <ul>
-                            <li class="BtnCTA"><a href="https://8020data.github.io/FRDocs_prod-master/#/" target="_blank" title="Go to the Tutorial">Do the Tutorial</a></li>
+                            <li class="BtnCTA"><a href="https://8020data.github.io/FRDocs_prod-master/#/" target="_blank" title="Go to the Tutorial">Do our Tutorial</a></li>
                             <li><a href="https://discord.com/channels/928752444316483585/928752444316483587" target="_blank" title="Be Part Of Our formR Discord Discussions">Discord Discussion</a></li>
                             <li><hr color="blue"></li>
                             <li><a href="https://discord.com/channels/928752444316483585/928752444316483587" target="_blank" title="Go to Our Support Page">Support</a></li>
