--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  windows.location = "/FRNet_prod-robin/home/index.html" 
+  windows.location.href = "/FRNet_prod-robin/home/index.html" 
 </script> 
