--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <script>
-//windows.location.href = "./home/index.html"
-  document.location.href = "file:///C:/WEBs/8020/VMs/et218t/webs/nodeapps/FRApps_/dev2-robin_v21016/FRNet_prod-robin/home/index.html"
+  document.location.href = "./home/index.html"
+//document.location.href = "file:///C:/WEBs/8020/VMs/et218t/webs/nodeapps/FRApps_/dev2-robin_v21016/FRNet_prod-robin/home/index.html"
 </script>
