Test for io site

--- a/home/index.html
+++ b/home/index.html
@@ -30,7 +30,7 @@
                     <div>
                         <div class="BoxMenu">
                         <ul>
-                            <li class="BtnCTA"><a href="https://8020data.github.io/FRDocs_prod-master/#/" target="_blank" title="Go to the Tutorial">&nbsp;&nbsp;&nbsp;&nbsp;Do our Tutorial&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+                            <li class="BtnCTA"><a href="https://8020data.github.io/FRDocs_prod-master/#/" target="_blank" title="Go to the Tutorial">&nbsp;&nbsp;&nbsp;&nbsp;Do The Tutorial&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
                             <li><a href="https://discord.com/channels/928752444316483585/928752444316483587" target="_blank" title="Be Part Of Our formR Discord Discussions">Discord Discussion</a></li>
                             <li><hr color="blue"></li>
                             <li><a href="https://discord.com/channels/928752444316483585/928752444316483587" target="_blank" title="Go to Our Support Page">Support</a></li>
@@ -58,7 +58,7 @@
             <div class="Section1">
                 <div class="Section1Title">The Renaissance Web Developer</div>
                 <div  class="Section1Paragraph">
-                    Shouldn&#39;t every computer professional understand the total picture? You can’t go wrong with more knowledge about all of the disciplines.
+                    xShouldn&#39;t every computer professional understand the total picture? You can’t go wrong with more knowledge about all of the disciplines.
                     <br><br>
                     The goal of the formR Tutorial is to give you a step by step guide to building a complete environment for a secure server on the cloud serving web pages that access and manipulate data via the Internet.
                 </div>
