Clean up folders and files.  Style changes

--- a/home/index.html
+++ b/home/index.html
@@ -58,7 +58,7 @@
             <div class="Section1">
                 <div class="Section1Title">The Renaissance Web Developer</div>
                 <div  class="Section1Paragraph">
-                    xShouldn&#39;t every computer professional understand the total picture? You can’t go wrong with more knowledge about all of the disciplines.
+                    Shouldn&#39;t every computer professional understand the total picture? You can’t go wrong with more knowledge about all of the disciplines.
                     <br><br>
                     The goal of the formR Tutorial is to give you a step by step guide to building a complete environment for a secure server on the cloud serving web pages that access and manipulate data via the Internet.
                 </div>
